# python-cli-paths

./: README.md  pyproject.toml
experiments/: dataclass_demo.py  fire_demo.py  panda_demo.py  subprocess_run_demo.py
python_cli_paths/: __init__.py  main.py
tests/: test_abcd.py  test_log.py
