[tool.poetry]
name = "python-cli-paths"
version = "0.1.0"
description = ""
authors = ["JC <jchan48@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cli_paths"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
