[tool.poetry]
name = "python-cli-paths"
version = "0.1.0"
description = ""
authors = ["JC <jchan48@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cli_paths"}]
license = "MIT"
#/home/ubuntu/.local/bin/poetry

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
#[options.entry_points]
#console_scripts =
#    my-example-utility = example.example_module:main
[tool.poetry.scripts]
my_package_cli = 'python_cli_paths.main:main'

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.2.x/reference/customize.html#pyproject-toml
# https://docs.pytest.org/en/7.2.x/reference/reference.html#ini-options-ref
# to think about this... shouldn't be project level
log_cli = "True"
log_cli_level = "WARNING"
